[gd_scene load_steps=5 format=3 uid="uid://cwx08v7o8mwfi"]

[ext_resource type="Script" path="res://scripts/timed_gate.gd" id="1_avsj0"]
[ext_resource type="Texture2D" uid="uid://dh1mqoj42mgk8" path="res://assets/brackeys_platformer_assets/sprites/platforms.png" id="2_s0l5k"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7yjjb"]
size = Vector2(30, 9)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dedj5"]
size = Vector2(30, 9)

[node name="timed gate" type="AnimatableBody2D"]
rotation = -1.5708
collision_mask = 2
script = ExtResource("1_avsj0")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_s0l5k")
region_enabled = true
region_rect = Rect2(17, 17, 30, 8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2.16563e-07, -0.5)
shape = SubResource("RectangleShape2D_7yjjb")

[node name="closeGate" type="Marker2D" parent="."]
position = Vector2(-1.09278e-06, 25)

[node name="activate" type="Area2D" parent="closeGate"]
collision_mask = 2

[node name="close" type="CollisionShape2D" parent="closeGate/activate"]
shape = SubResource("RectangleShape2D_dedj5")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Node2D" type="Node2D" parent="."]
position = Vector2(39, 6)
rotation = 1.5708

[node name="Label" type="Label" parent="Node2D"]
offset_left = -1.0
offset_right = 39.0
offset_bottom = 23.0

[connection signal="body_entered" from="closeGate/activate" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="closeGate/activate" to="." method="_on_activate_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
